--- a/app/views/index.html
+++ b/app/views/index.html
@@ -119,8 +119,8 @@
                  
                  
                  
-                 <a class="nhsuk-button" href="v4/respond-to-your-letter">Respond to your letter pay or confirm</a>
-                 <a class="nhsuk-button" href="v4/respond-to-your-letter">Respond to your letter added paragraph</a>
+                 <a class="nhsuk-button" href="v4/respond-to-your-letter">Respond to your letter</a>
+                
 
                  <div class="nhsuk-action-link nhsuk-u-margin-bottom-3">
                     <a class="nhsuk-action-link__link" href="v4/user-journey-4">
