--- a/app/views/v5/direct-debit-date.html
+++ b/app/views/v5/direct-debit-date.html
@@ -49,7 +49,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="debit-card" method="get" class="form">
+      <form action="direct-debit-check-address" method="post" class="form">
 
         <span class="nhsuk-caption-l">Pay a Penalty Charge Notice</span>
         <h1 class="nhsuk-heading-xl">Which date would you like payments to be taken each month?</h1>
