--- a/app/views/v5/pay-by-dd.html
+++ b/app/views/v5/pay-by-dd.html
@@ -49,58 +49,58 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="direct-debit-date" method="post" class="form">
+      <form action="direct-debit-instalment-option" method="post" class="form">
 
         <span class="nhsuk-caption-l">Pay a Penalty Charge Notice</span>
-        <h1 class="nhsuk-heading-xl">Select how many months you want to pay over</h1>
-        <div class="nhsuk-form-group">
-          <p>Your total amount to pay is £123.80. You will not be charged interest on this amount and it will not affect your credit score.</p>
-          <p>Select how many months you want to pay over</p>
+        <h1 class="nhsuk-heading-xl">Paying by Direct Debit</h1>
+        <form>
 
-<div class="nhsuk-form-group">
-  <div class="nhsuk-radios">
-
-    <div class="nhsuk-radios__item">
-      <input class="nhsuk-radios__input" id="example-hints-1" name="example-hints" type="radio" value="gateway" aria-describedby="example-hints-1-item-hint">
-      <label class="nhsuk-label nhsuk-radios__label" for="example-hints-1">
-        3 months
-      </label>
-      <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-1-item-hint">
-        1 payment of £41.28 followed by 2 payments of £41.26
-      </div>
-    </div>
-    <div class="nhsuk-radios__item">
-      <input class="nhsuk-radios__input" id="example-hints-1" name="example-hints" type="radio" value="gateway" aria-describedby="example-hints-1-item-hint">
-      <label class="nhsuk-label nhsuk-radios__label" for="example-hints-1">
-        6 months
-      </label>
-      <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-1-item-hint">
-        1 payment of £20.65 followed by 5 payments of £20.63
-      </div>
-    </div>
-    <div class="nhsuk-radios__item">
-      <input class="nhsuk-radios__input" id="example-hints-1" name="example-hints" type="radio" value="gateway" aria-describedby="example-hints-1-item-hint">
-      <label class="nhsuk-label nhsuk-radios__label" for="example-hints-1">
-        12 months
-      </label>
-      <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-1-item-hint">
-        1 payment of £10.39 followed by 11 payments of £10.31
-      </div>
-    </div>
-       
-       </div>
-    </div>
-    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you cannot afford any of these monthly plans (link opens in new window).</a></p>
+          <div class="nhsuk-form-group">
+        
+           <p>Direct Debit lets you pay your penalty charge over a number of months, on a date that suits you.</p>
+           <div class="nhsuk-inset-text">
+            <span class="nhsuk-u-visually-hidden">Information: </span>
+            <p>If we are unable to take a payment, you may have to pay extra charges.</p>
+          </div>
+          <p>If we are unable to take payments on more than one occasion, your Direct Debit plan may be cancelled and you may need to pay the amount you owe in full.</p>
+              <div class="nhsuk-checkboxes">
+        
+                <div class="nhsuk-checkboxes__item">
+                  <input class="nhsuk-checkboxes__input" id="example-1" name="example" type="checkbox" value="email">
+                  <label class="nhsuk-label nhsuk-checkboxes__label" for="example-1">
+                    I'm using my own bank account
+                  </label>
+                </div>
+        
+                <div class="nhsuk-checkboxes__item">
+                  <input class="nhsuk-checkboxes__input" id="example-2" name="example" type="checkbox" value="phone">
+                  <label class="nhsuk-label nhsuk-checkboxes__label" for="example-2">
+                    I'm the only person required to authorise debits from this account
+                  </label>
+                </div>
+        
+                <div class="nhsuk-checkboxes__item">
+                  <input class="nhsuk-checkboxes__input" id="example-3" name="example" type="checkbox" value="text message">
+                  <label class="nhsuk-label nhsuk-checkboxes__label" for="example-3">
+                    I understand that if you are unable to take payments on more than one occasion, I might have to pay extra charges and may not be able to pay by Direct Debit again
+                  </label>
+                </div>
+        <p>Read the <a href="">Direct Debit Guarantee</a></p>
+              </div>
             </fieldset>
+        
+          </div>
+        
+        
         
         
     <div class="nhsuk-form-group">
-     <button class="nhsuk-button" type="submit">
-      Continue
-     </button>
+    <button class="nhsuk-button" type="submit">
+     Continue
+    </button>
     </div>
-
   </form>
+        
    
 
     </div>
